# aoc25

./: main.py  pyproject.toml  run
day1/: main.py
day3/: main.py
src/aoc2025/: __init__.py  lib.py
src/aoc2025/day1/: main.py
src/aoc2025/day10/: main.py
src/aoc2025/day11/: main.py
src/aoc2025/day3/: main.py
src/aoc2025/day4/: main.py
src/aoc2025/day5/: main.py
src/aoc2025/day6/: main.py
src/aoc2025/day7/: main.py
src/aoc2025/day8/: main.py
src/aoc2025/day9/: main.py
