[project]
name = "aoc2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aoc2025"]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
]
